@@ -14,6 +14,8 @@ CHANGES
 
 - Expanded the presentation of module documentation.
 
+- Class documentation now includes constructor information.
+
 3.6.0 (2009-01-31)
 ------------------
 
